--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="pavelosipov.github.com : Personal blog" />
+    <meta name="description" content="Pavel Osipov" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -27,7 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome to my personal blog</h3>
+        <h3>Welcome to my personal blog!</h3>
         <p>Content will be available soon.</p>
       </section>
     </div>
